--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="home-img">
-        <img src="./photos/Myphoto.jpeg" alt="Profile Image" />
+        <img src="./Myphoto.jpeg" alt="Profile Image" />
       </div>
     </section>
     <section id="education" class="education-section">
@@ -96,7 +96,7 @@
       <div class="project-grid">
         <div class="project-card">
           <h4>Portfolio</h4>
-          <img src="./photos/portfolio.png" alt="image" />
+          <img src="./portfolio.png" alt="image" />
           <p>
             Personal Portfolio , high-performance portfolio website showcasing
             my work as a Front-End Developer. Built with HTML5, CSS3
@@ -111,7 +111,7 @@
       <div class="project-grid">
         <div class="project-card">
           <h4>Task AI Landing page</h4>
-          <img src="./photos/TaskAI.png" alt="image" />
+          <img src="./TaskAI.png" alt="image" />
           <p>
             TaskAI – SaaS Landing Page A modern, high-conversion landing page
             for an AI-powered task management tool. Developed using HTML5, CSS3
@@ -169,3 +169,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
