--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             Dark/Light mode toggle, smooth ScrollReveal animations, and modular,
             dynamic content rendering for projects and education.
           </p>
-          <a href="#home"><i class="fas fa-external-link-alt"></i></a>
+          <a href=" https://nermeensafwat.github.io/Nermeen-Safwat-Portofilio/"><i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
 
@@ -169,4 +169,5 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
